; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_dock.c_dock_in_progress.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_dock.c_dock_in_progress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dock_station = type { i32, i64 }

@DOCK_DOCKING = common dso_local global i32 0, align 4
@jiffies = common dso_local global i32 0, align 4
@HZ = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dock_station*)* @dock_in_progress to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dock_in_progress(%struct.dock_station* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.dock_station*, align 8
  store %struct.dock_station* %0, %struct.dock_station** %3, align 8
  %4 = load %struct.dock_station*, %struct.dock_station** %3, align 8
  %5 = getelementptr inbounds %struct.dock_station, %struct.dock_station* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 8
  %7 = load i32, i32* @DOCK_DOCKING, align 4
  %8 = and i32 %6, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %19, label %10

10:                                               ; preds = %1
  %11 = load i32, i32* @jiffies, align 4
  %12 = load %struct.dock_station*, %struct.dock_station** %3, align 8
  %13 = getelementptr inbounds %struct.dock_station, %struct.dock_station* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @HZ, align 8
  %16 = add nsw i64 %14, %15
  %17 = call i64 @time_before(i32 %11, i64 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %10, %1
  store i32 1, i32* %2, align 4
  br label %21

20:                                               ; preds = %10
  store i32 0, i32* %2, align 4
  br label %21

21:                                               ; preds = %20, %19
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i64 @time_before(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
